--- a/package.json
+++ b/package.json
@@ -40,9 +40,7 @@
       "icon": "public/icon.png",
       "sign": false,
       "signAndEditExecutable": false,
-      "forceCodeSigning": false,
-      "certificateFile": null,
-      "certificatePassword": null
+      "forceCodeSigning": false
     },
     "mac": {
       "target": "dmg",
