--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "socket.io-client": "^4.7.2",
     "tailwindcss": "^3.3.0",
     "uuid": "^9.0.0",
+    "web-push": "^3.6.7",
     "xlsx": "^0.18.5",
     "zustand": "^4.4.1"
   },
